--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,8 +3,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Боты и сервисы для пробива / деанона информации</title>
-  <meta name="keywords" content="боты, тг, телеграм, побив, боты для пробива, найти, узнать, номер, телефона, человек, пробить номер, пробив по номеру, пробить по фото, пробить авто, поиск информации, телефон, ФИО, проверка номера, проверка email, поиск социальных сетей, Telegram бот, ГИБДД, геолокация по номеру телефона">
-  <meta name="description" content="Боты пробива — это уникальные инструменты для поиска информации о человеке по номеру телефона, ФИО, авто, паролю и многим другим параметрам.">
+  <meta name="keywords" content="боты, тг, телега, проверка, поиск данных, обнаружить, узнать, контактный номер, телефон, личность, найти номер, поиск по номеру, идентификация по фотографии, проверка автомобиля, информация о человеке, ФИО, проверка телефона, проверка email, нахождение в соцсетях, Telegram бот, ГИБДД, определение местоположения по номеру телефона">
+  <meta name="description" content="Боты телеграм для поиска информации — позволяют находить данные о людях по различным критериям, таким как номер телефона, ФИО, автомобиль, пароль и другие параметры.">
   <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
   <link rel="canonical" href="{{ site.url }}{{ page.url | replace:'index.html','' | replace:'/','' }}">
   
