--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,17 +5,16 @@
 
     <div class="footer-col-wrapper">
       <div class="footer-col">
-
-      {%- if site.author %}
-        <ul class="contact-list">
-          {% if site.author.name -%}
-            <li class="p-name">{{ site.author.name | escape }}</li>
-          {% endif -%}
-          {% if site.author.email -%}
-            <li><a class="u-email" href="mailto:{{ site.author.email }}">{{ site.author.email }}</a></li>
-          {%- endif %}
-        </ul>
-      {%- endif %}
+        {%- if site.author %}
+          <ul class="contact-list">
+            {% if site.author.name -%}
+              <li class="p-name">{{ site.author.name | escape }}</li>
+            {% endif -%}
+            {% if site.author.email -%}
+              <li><a class="u-email" href="mailto:{{ site.author.email }}">{{ site.author.email }}</a></li>
+            {%- endif %}
+          </ul>
+        {%- endif %}
       </div>
       <div class="footer-col">
         <p>{{ site.description | escape }}</p>
@@ -25,9 +24,12 @@
     <div class="social-links">
       {%- include social.html -%}
     </div>
-<div class="footer-bottom">
-  &copy; 2025 Все права защищены.
-</div>
-  </div>
 
+    <div class="footer-bottom">
+      &copy; {{ "now" | date: "%Y" }} Все права вроде как защищены.
+      <br>Если что — я вас не знаю.
+    </div>
+
+  </div>
 </footer>
+
