--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,8 +26,7 @@
     </div>
 
     <div class="footer-bottom">
-      &copy; {{ "now" | date: "%Y" }} Все права вроде как защищены.
-      <br>Если что — я вас не знаю.
+     &copy; {{ "now" | date: "%Y" }} Все права вроде как защищены. Если что — я вас не знаю.
     </div>
 
   </div>
